--- a/src/componentStyling/global.css
+++ b/src/componentStyling/global.css
@@ -26,21 +26,19 @@
 }
 
 /* form styling */
+.input-container {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
 .input-box {
   border: 2px solid black;
   width: 300px;
 }
 
 .text-area {
-  border: 2px solid black;
   width: 300px;
   height: 100px;
 }
 
-.input-container {
-  text-align: left;
-}
-
-.input-label-text {
-direction: ltr;
-}
